# lyrics-prompter

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
assets/: icon_argb.rs
src/: main.rs
